fetching repository